--- a/Bootstrap/app/config/config.yml
+++ b/Bootstrap/app/config/config.yml
@@ -79,3 +79,5 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+gregwar_captcha: ~
